reorganized web service to a different directory as benjamin is gonna be using assistant_core
